<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:hint="@string/site_title_hint"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:id="@+id/add_site_title"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/add_site_password"
            android:hint="@string/site_password_hint"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>