...
            <FrameLayout
                android:id="@+id/contentFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fab_add_buno"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:fabSize="normal"-->
            <!--app:layout_anchor="@id/contentFrame"-->
            <!--app:layout_anchorGravity="bottom|right|end"/>-->

...
